--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-  <title>Chayapol Profile</title>
+  <title>Thu Yein Profile</title>
 </head>
 
 <body>
-  <h1>Chayapol Profile</h1>
+  <h1>Thu Yein Profile</h1>
   <img src="https://scontent.fbkk2-7.fna.fbcdn.net/v/t1.6435-9/70964036_2578895852194250_7898623291760312320_n.jpg?_nc_cat=106&ccb=1-5&_nc_sid=730e14&_nc_ohc=-hWT27U-xGMAX-Au4i4&_nc_ht=scontent.fbkk2-7.fna&oh=672a10c8b8d41048df553a6de391b4f6&oe=613DCA44">
   <p>
     lorem ipsum dolor sit amet, consectetur adipiscing elit.
